--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -5,7 +5,7 @@ data:
   batch_size:  16
   num_workers: 0
   patch_size: 256
-  data_dir:    ./data/preprocessed
+  data_dir:    
 model:
   base_channels: 32
   depth:         4
