--- a/src/config/benchmark.yaml
+++ b/src/config/benchmark.yaml
@@ -2,8 +2,8 @@
 seed:          42
 device:       cuda
 data:
-  batch_sizes:  [16, 20, 24]
-  num_workers: [16, 24, 32]
+  batch_sizes:  [28,26,24]
+  num_workers: [16]
   patch_size: 256
   patches_per_image: 64
   data_dir:  /localdisk/temp_zidaan/data/preprocessed/ 
